Bug 423136 - Konsole crashes with multiple instances opened and changing profile settings
Summary: Konsole crashes with multiple instances opened and changing profile settings
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 19.12.2
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2020-06-18 07:53 UTC by avallash
Modified: 2023-03-13 18:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description avallash 2020-06-18 07:53:08 UTC
Application: konsole (19.12.2)

Qt Version: 5.14.2
Frameworks Version: 5.70.0
Operating System: Linux 5.6.18-300.fc32.x86_64 x86_64
Windowing system: X11
Distribution: "Fedora release 32 (Thirty Two)"

-- Information about the crash:
- What I was doing when the application crashed:

I was trying to get more info on another Konsole bug (not remembering windows size) and I was changing selected profile for one window, changing remember window size option and "Ctrl + Shift + N" opening new instances. After changing default profile option crash occured.

The crash can be reproduced sometimes.

-- Backtrace:
Application: Konsole (konsole), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f2dd97dc0c0 (LWP 5625))]

Thread 6 (Thread 0x7f2dc1ff7700 (LWP 5631)):
#0  0x00007f2ddca80e92 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f2dc89361db in util_queue_thread_func () from /usr/lib64/dri/iris_dri.so
#2  0x00007f2dc8935cab in impl_thrd_routine () from /usr/lib64/dri/iris_dri.so
#3  0x00007f2ddca7a432 in start_thread () from /lib64/libpthread.so.0
#4  0x00007f2ddf26b9d3 in clone () from /lib64/libc.so.6

Thread 5 (Thread 0x7f2dc27f8700 (LWP 5630)):
#0  0x00007f2ddca80e92 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f2dc89361db in util_queue_thread_func () from /usr/lib64/dri/iris_dri.so
#2  0x00007f2dc8935cab in impl_thrd_routine () from /usr/lib64/dri/iris_dri.so
#3  0x00007f2ddca7a432 in start_thread () from /lib64/libpthread.so.0
#4  0x00007f2ddf26b9d3 in clone () from /lib64/libc.so.6

Thread 4 (Thread 0x7f2dc2ff9700 (LWP 5629)):
#0  0x00007f2ddca80e92 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f2dc89361db in util_queue_thread_func () from /usr/lib64/dri/iris_dri.so
#2  0x00007f2dc8935cab in impl_thrd_routine () from /usr/lib64/dri/iris_dri.so
#3  0x00007f2ddca7a432 in start_thread () from /lib64/libpthread.so.0
#4  0x00007f2ddf26b9d3 in clone () from /lib64/libc.so.6

Thread 3 (Thread 0x7f2dc37fa700 (LWP 5628)):
#0  0x00007f2ddca80e92 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f2dc89361db in util_queue_thread_func () from /usr/lib64/dri/iris_dri.so
#2  0x00007f2dc8935cab in impl_thrd_routine () from /usr/lib64/dri/iris_dri.so
#3  0x00007f2ddca7a432 in start_thread () from /lib64/libpthread.so.0
#4  0x00007f2ddf26b9d3 in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7f2dcad85700 (LWP 5627)):
#0  0x00007f2ddc182be1 in g_source_unref_internal () from /lib64/libglib-2.0.so.0
#1  0x00007f2ddc184965 in g_source_iter_next () from /lib64/libglib-2.0.so.0
#2  0x00007f2ddc185f03 in g_main_context_prepare () from /lib64/libglib-2.0.so.0
#3  0x00007f2ddc1869fb in g_main_context_iterate.constprop () from /lib64/libglib-2.0.so.0
#4  0x00007f2ddc186c03 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#5  0x00007f2dddb97b8b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#6  0x00007f2dddb4a91b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#7  0x00007f2ddd9b6427 in QThread::exec() () from /lib64/libQt5Core.so.5
#8  0x00007f2ddd1a151b in QDBusConnectionManager::run() () from /lib64/libQt5DBus.so.5
#9  0x00007f2ddd9b7690 in QThreadPrivate::start(void*) () from /lib64/libQt5Core.so.5
#10 0x00007f2ddca7a432 in start_thread () from /lib64/libpthread.so.0
#11 0x00007f2ddf26b9d3 in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7f2dd97dc0c0 (LWP 5625)):
[KCrash Handler]
#4  0x00007f2dde526a76 in QWidget::show() () from /lib64/libQt5Widgets.so.5
#5  0x00007f2dddb7afb0 in void doActivate<false>(QObject*, int, void**) () from /lib64/libQt5Core.so.5
#6  0x00007f2dde4e2876 in QAction::triggered(bool) () from /lib64/libQt5Widgets.so.5
#7  0x00007f2dde4e5161 in QAction::activate(QAction::ActionEvent) () from /lib64/libQt5Widgets.so.5
#8  0x00007f2dde662d5a in QMenuPrivate::activateCausedStack(QVector<QPointer<QWidget> > const&, QAction*, QAction::ActionEvent, bool) () from /lib64/libQt5Widgets.so.5
#9  0x00007f2dde66a3c2 in QMenuPrivate::activateAction(QAction*, QAction::ActionEvent, bool) () from /lib64/libQt5Widgets.so.5
#10 0x00007f2dde52a36e in QWidget::event(QEvent*) () from /lib64/libQt5Widgets.so.5
#11 0x00007f2dde4e9063 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib64/libQt5Widgets.so.5
#12 0x00007f2dde4ee891 in QApplication::notify(QObject*, QEvent*) () from /lib64/libQt5Widgets.so.5
#13 0x00007f2dddb4bfc0 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib64/libQt5Core.so.5
#14 0x00007f2dde4ed78a in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool, bool) () from /lib64/libQt5Widgets.so.5
#15 0x00007f2dde54398f in QWidgetWindow::handleMouseEvent(QMouseEvent*) () from /lib64/libQt5Widgets.so.5
#16 0x00007f2dde545dde in QWidgetWindow::event(QEvent*) () from /lib64/libQt5Widgets.so.5
#17 0x00007f2dde4e9063 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib64/libQt5Widgets.so.5
#18 0x00007f2dddb4bfc0 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib64/libQt5Core.so.5
#19 0x00007f2dddf3216b in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /lib64/libQt5Gui.so.5
#20 0x00007f2dddf1415b in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Gui.so.5
#21 0x00007f2dcc6e2c9e in xcbSourceDispatch(_GSource*, int (*)(void*), void*) () from /lib64/libQt5XcbQpa.so.5
#22 0x00007f2ddc1867af in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#23 0x00007f2ddc186b38 in g_main_context_iterate.constprop () from /lib64/libglib-2.0.so.0
#24 0x00007f2ddc186c03 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#25 0x00007f2dddb97b73 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#26 0x00007f2dddb4a91b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#27 0x00007f2dddb525a6 in QCoreApplication::exec() () from /lib64/libQt5Core.so.5
#28 0x00007f2ddf35faeb in kdemain () from /lib64/libkdeinit5_konsole.so
#29 0x00007f2ddf191042 in __libc_start_main () from /lib64/libc.so.6
#30 0x00005618875c50ae in _start ()
[Inferior 1 (process 5625) detached]

Possible duplicates by query: bug 423132, bug 422533, bug 422092, bug 421930, bug 420820.

Reported using DrKonqi
Comment 1 nsprangers@gmail.com 2021-09-04 19:03:27 UTC
I can reproduce this on version 21.11.70 (current git) but not on 21.08.0 (packaged with Manjaro).

It reliably crashes when selecting "Default [Read Only]" and clicking "Set as default" with this error:

ASSERT: "_profiles.find(profile) != _profiles.cend()" in file /home/nathan/kde/src/konsole/src/profile/ProfileManager.cpp, line 414

Cannot reproduce on 21.08.0 (Manjaro) version.
Comment 2 Waqar Ahmed 2023-03-13 18:49:25 UTC
Git commit 2d0fad18dc3d6fd8a45c50b8fd889889b473e0e2 by Waqar Ahmed.
Committed on 13/03/2023 at 18:31.
Pushed by hindenburg into branch 'master'.

Fix crash in ProfileSettings

Fixes the following crash

- Open Settings -> Manage Profiles...
- Click on a non default profile and edit it
- In "Edit Profile Dialog", check "Default" to make this profile default
- Click Ok, Now we are back in "Manage Profiles" dialog.
- See that "Set as Default" is still clickable, clicking it crashes konsole
Related: bug 445173, bug 454986

M  +6    -0    src/settings/ProfileSettings.cpp

https://invent.kde.org/utilities/konsole/commit/2d0fad18dc3d6fd8a45c50b8fd889889b473e0e2