Fix crash in ProfileSettings

Fixes the following crash

- Open Settings -> Manage Profiles...
- Click on a non default profile and edit it
- In "Edit Profile Dialog", check "Default" to make this profile default
- Click Ok, Now we are back in "Manage Profiles" dialog.
- See that "Set as Default" is still clickable, clicking it crashes konsole

BUG: 423136
BUG: 445173
BUG: 454986